terraform/modules/networks/main.tf
# VPC
# Disabling VPC flow logs due to cost constraints
#tfsec:ignore:aws-ec2-require-vpc-flow-logs-for-all-vpcs
resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    name = "${var.prefix}-vpc"
  }
}

data "aws_availability_zones" "available" {
  filter {
    name   = "state"
    values = ["available"]
  }
  filter {
    name   = "opt-in-status"
    values = ["opt-in-not-required"]
  }
}

locals {
  # Use only first 2 AZs
  selected_azs = slice(data.aws_availability_zones.available.names, 0, 2)
}

# Public Subnet
#tfsec:ignore:aws-ec2-no-public-ip-subnet
resource "aws_subnet" "public-subnet" {
  count      = length(local.selected_azs)
  vpc_id     = aws_vpc.main.id
  cidr_block = cidrsubnet(var.vpc_cidr, 8, count.index + 1)

  availability_zone = local.selected_azs[count.index % length(local.selected_azs)]

  map_public_ip_on_launch = true

  tags = {
    Name = "${var.prefix}-public-subnet-${count.index + 1}"
  }
}

# Private Subnet
resource "aws_subnet" "private-subnet" {
  count      = var.private_subnet_count
  vpc_id     = aws_vpc.main.id
  cidr_block = cidrsubnet(var.vpc_cidr, 8, count.index + 11)

  availability_zone = local.selected_azs[count.index % length(local.selected_azs)]

  tags = {
    Name = "${var.prefix}-private-subnet-${count.index}"
  }
}

locals {
  efs_subnets_by_az = {
    for subnet in aws_subnet.private-subnet :
    subnet.availability_zone => subnet.id...
  }
}

locals {
  efs_subnet_ids = [
    for az, subnet_ids in local.efs_subnets_by_az :
    subnet_ids[0]
  ]
}

# Elastic IP Address
resource "aws_eip" "eip" {
  domain = "vpc"

  tags = {
    Name = "${var.prefix}-nat-eip"
  }
}

# Internet Gateway
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${var.prefix}-igw"
  }
}

# NAT Gateway
resource "aws_nat_gateway" "nat-gw" {
  allocation_id = aws_eip.eip.id
  subnet_id     = aws_subnet.public-subnet[0].id

  depends_on = [aws_internet_gateway.igw]

  tags = {
    Name = "${var.prefix}-nat-gw"
  }
}

# Public Route Table
resource "aws_route_table" "public-rt" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "${var.prefix}-public-rt"
  }
}

# Associate Public Subnets
resource "aws_route_table_association" "public_assoc" {
  count          = length(local.selected_azs)
  subnet_id      = aws_subnet.public-subnet[count.index].id
  route_table_id = aws_route_table.public-rt.id
}


# Private Route Table
resource "aws_route_table" "private-rt" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat-gw.id
  }

  tags = {
    Name = "${var.prefix}-private-rt"
  }

}

# Associate Private Subnets
resource "aws_route_table_association" "private_assoc" {
  count          = var.private_subnet_count
  subnet_id      = aws_subnet.private-subnet[count.index].id
  route_table_id = aws_route_table.private-rt.id
}
